--- a/src/index.css
+++ b/src/index.css
@@ -6,3 +6,8 @@
 *{
     font-family: sora;
 }
+
+.my-config {
+    --uc-primary-oklch-dark: 69% 0.1768 258.4;
+    --uc-primary-oklch-light: 59% 0.22 264;
+  }
